# wasm-playground

./: .gitignore  Cargo.toml  README.md  build-and-run-all.sh  build-and-run-exports-web.sh  build-and-run-generate-jco.sh  build-and-run-imports.sh  build-and-run-jco.sh  build-and-run-no-imports.sh  build-and-run-rust-web.sh  build-and-run-sync.sh  build-and-run-sys.sh  build-and-run-ts.sh  build-and-run-web.sh  build-and-run.sh  build-plugins.sh  build-wasmer.sh  build-wasmtime.sh  build.sh  exports.wit  protocol-host.wai  protocol-plugin.wai  protocol.wit  run-js.sh  run-no-wai-web.sh  run-sys.sh  run-wasm-only-forked.sh  run-wasmer.sh  run-wasmer2.sh  run-wasmer3-str.sh  run-wasmer3-sys.sh  run-wasmer3-web.sh  run-wasmer3.sh  run-wasmtime.sh  run-web.sh  run.sh  sample-protocol-host.wai  sample-protocol-plugin.wai  world.wit
bacon-exercise/: .gitignore  Cargo.toml  build-exercise.sh
bacon-exercise/src/: main.rs
calculator/: Cargo.toml
calculator/src/: lib.rs
fp1-protocol/: .gitignore  Cargo.toml
fp1-protocol/src/: main.rs  types.rs
fp2-plugin/: Cargo.toml
fp2-plugin/src/: lib.rs
fp3-runtime/: .gitignore  Cargo.toml
fp3-runtime/files/: content1.txt  content2.txt  content3.txt
fp3-runtime/src/: main.rs
fp3-runtime/src/spec/: mod.rs
guest/: .gitignore  Cargo.toml  build.sh
guest-component/: .gitignore  Cargo.toml
guest-component/src/: bindings.rs
guest-exports/: Cargo.toml  build-exports.sh
guest-exports/src/: lib.rs
guest-imports/: Cargo.toml
guest-imports/src/: lib.rs
guest-imports/wit/: world.wit
guest-no-imports/: Cargo.toml
guest-no-imports/src/: lib.rs
guest-no-imports/wit/: world.wit
guest-reactor/: Cargo.toml  build-reactor.sh
guest-reactor/src/: lib.rs
guest-reactor/wit/: world.wit
guest-rust/: .gitignore  Cargo.toml  build-guest.sh
guest-rust/src/: bindings.rs  lib.rs
guest/src/: lib.rs
hello-wasmer-u64/: Cargo.toml
hello-wasmer-u64/src/: lib.rs
history/: wasi_components_guest-clock.js
host/: Cargo.toml
host-imports/: Cargo.toml
host-imports/src/: main.rs
host-js/: .gitignore  Cargo.toml
host-js/example-webserver/: docker-compose.yml  index.html
host-js/src/: lib.rs
host-no-imports/: Cargo.toml
host-no-imports/src/: main.rs
host-sys/: Cargo.toml
host-sys/src/: main.rs
host-wasmer/: Cargo.toml
host-wasmer/src/: main.rs
host-wasmtime/: Cargo.toml
host-wasmtime/src/: main.rs
host/src/: main.rs
no-wai-sys/: Cargo.toml
no-wai-sys/src/: main.rs
no-wai-web/: Cargo.toml
no-wai-web/pkg/: docker-compose.yml  index.html
no-wai-web/src/: lib.rs
plugin/: Cargo.toml  build.sh
plugin-rust/: Cargo.toml  build-plugin.sh
plugin-rust/src/: lib.rs
plugin-wasi/: .gitignore  Cargo.toml  build-plugin.sh
plugin-wasi/src/: lib.rs
plugin/src/: lib.rs
runtime/: Cargo.toml
runtime-rust/: Cargo.toml
runtime-rust-wasmtime/: .gitignore  Cargo.toml
runtime-rust-wasmtime-sync/: Cargo.toml
runtime-rust-wasmtime-sync/src/: main.rs
runtime-rust-wasmtime/src/: main.rs
runtime-rust-web/: .gitignore  Cargo.toml
runtime-rust-web/rust-web/: .gitignore  docker-compose.yml  index.html
runtime-rust-web/src/: js_impl.rs  lib.rs
runtime-rust/src/: main.rs
runtime-ts/: .gitignore  package.json
runtime-ts/src/: index.ts
runtime-web-generate-jco/: docker-compose.yml  index.html
runtime-web-jco/: .gitignore  docker-compose.yml  index.html
runtime-web-jco/out-dir/: better-component.js
runtime-web-jco/src/browser/: cli-base.js
runtime-web-rollup/: docker-compose.yml  index.html
runtime-web-rollup/src/: bindgen.js  plugin.js  rollup.browser.es.js  rollup.browser.js  wit_imports.js
runtime/src/: main.rs
rust-plugin/: Cargo.toml
rust-plugin/src/: lib.rs
rust-wasmer-host/: Cargo.toml
rust-wasmer-host/src/: main.rs
simple-plugin/: Cargo.toml
simple-plugin/src/: lib.rs
src/: main.rs
ts-runtime/: .gitignore  run.sh  tsconfig.json
ts-runtime/src/: index.ts
wai-sample-plugin/: Cargo.toml
wai-sample-plugin/src/: lib.rs
wai-sample-wasmer-host/: Cargo.toml
wai-sample-wasmer-host/src/: main.rs
wai-sample-wasmtime-host/: Cargo.toml
wai-sample-wasmtime-host/src/: main.rs
wasm-only-forked/: Cargo.toml  LICENSE_MIT  pkg.gitignore
wasm-only-forked/pkg/: docker-compose.yml  index.html
wasm-only-forked/src/: lib copy.rs  lib.rs
wasmer-plugin/: Cargo.toml
wasmer-plugin-str/src/: lib.rs
wasmer-plugin/src/: lib.rs
wasmer2-runtime/: Cargo.toml
wasmer2-runtime/src/: main.rs
wasmer3-runtime/: Cargo.toml
wasmer3-runtime-str/: Cargo.toml
wasmer3-runtime-str/src/: main.rs
wasmer3-runtime/pkg/: .gitignore  docker-compose.yml  index.html
wasmer3-runtime/src/: lib.rs  main.rs
with-wai-sys/: Cargo.toml
with-wai-sys/src/: main.rs
