[package]
name = "fp-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fp-bindgen-support = { version = "3.0", features = ["async", "wasmer2_host"] }
wasmer = { version = "2.3", features = ["singlepass"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
futures = "0.3.28"
