[package]
name = "guest-exports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cargo-component-bindings = "0.5.0"
wit-bindgen = "0.14.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:guest-exports"

[package.metadata.component.dependencies]
