[package]
name = "hello-wasmer-u64"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.61"
wasm-bindgen = "0.2"
# wasmer = { version = "3.1.1", default-features = false, features = ["js-default"] }
# wasmer = { git = "https://github.com/wasmerio/wasmer.git", default-features = false, features = ["js-default"] }
wasmer = { path = "../../wasmer/lib/api", default-features = false, features = ["js-default", "wat"] }
