[package]
name = "host-no-imports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-trait = { version =  "0.1.71" }
tokio = { version = "1.29.1", features = ["full"] }
wasmtime = { version = "15.0", features = ["component-model"] }
wasmtime-wasi = { version = "15.0" }
