[package]
name = "runtime-rust-wasmtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-trait = { version =  "0.1.71" }
tokio = { version = "1.29.1", features = ["full"] }
wasmtime = { version = "10.0.1", features = ["component-model"] }
wasmtime-wasi = { version = "10.0.1" }
