[package]
name = "runtime-rust-wasmtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { version = "19.0.2", default-features = false, features = ["cranelift", "runtime", "component-model"] }

