[package]
name = "runtime-rust-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# web-sys = { version = "0.3.64", features = ["Request", "RequestInit", "Response", "Window"] }
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
console_error_panic_hook = "0.1.7"
