[package]
name = "wasmer-usage"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = {version = "0.2.84", optional = true }
# wasmer = { version = "3.1.1", default-features = false, features = ["js-default"] }
# wasmer = { path = "../wasmer/lib/api", default-features = false, features = ["js-default"] }
# wasmer = { path = "../../wasmer/lib/api", default-features = false, features = ["js-default"] }
wasmer = { git = "https://github.com/wasmerio/wasmer.git", default-features = false }

[features]
sys = ["wasmer/sys-default"]
js = ["wasmer/js-default", "wasm-bindgen"]
