[package]
name = "no-wai-sys"
version = "0.1.0"
authors = ["kajacx <kajacx@gmail.com>"]
edition = "2021"

[dependencies]
# wasmer = { version = "=3.3.0" }
# wai-bindgen-wasmer = { version = "=0.4.0", features = ["sys"]}
wai-bindgen-wasmer = { path = "../../../wasmer/lib/wai-bindgen-wasmer", features = ["cranelift"]}
# wasmer = {version = "=3.3.0", features = ["cranelift"]}
